k8s/simple-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staywell-manager-dev
  labels:
    name: staywell-manager-dev
