k8s/simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staywell-frontend-service
  namespace: staywell-manager-dev
  labels:
    app: staywell-frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: staywell-frontend
